k8s/apps/forgejo-runner/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: forgejo-runner
spec:
  podSelector: {}
  policyTypes:
    - Ingress
